# rs_aoc2020

./: Cargo.toml
data/: day13_example3.txt  day13_example4.txt  day13_example5.txt  day13_example6.txt  solutions.txt
src/: adapter_array.rs  binary_boarding.rs  custom_customs.rs  docking_data.rs  encoding_error.rs  handheld_halting.rs  handy_haversacks.rs  lib.rs  main.rs  passport_processing.rs  password_philosophy.rs  rain_risk.rs  rambunctious_recitation.rs  report_repair.rs  seating_system.rs  shuttle_search.rs  ticket_translation.rs  toboggan_trajectory.rs
